[gd_scene load_steps=4 format=3 uid="uid://y5tse4gg3ruo"]

[ext_resource type="Script" path="res://scripts/props/Electricity/PowerBox.gd" id="1_kose6"]
[ext_resource type="Texture2D" uid="uid://bxm81lfbdvkgk" path="res://assets/textures/props/Electricity/box.png" id="2_tau3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jj08"]
size = Vector2(270, 316)

[node name="PowerBox" type="Node2D"]
script = ExtResource("1_kose6")
on_color = Color(0.972549, 0.980392, 0.564706, 1)
off_color = Color(0.631373, 0.756863, 0.505882, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_7jj08")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tau3k")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
